objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>AHRC__c</fullName>
        <label>AHRC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>561</fullName>
                </value>
                <value>
                    <fullName>56A - IO-DC</fullName>
                </value>
                <value>
                    <fullName>56C - CD</fullName>
                </value>
                <value>
                    <fullName>56D - TATD</fullName>
                </value>
                <value>
                    <fullName>56E - IO-AA</fullName>
                </value>
                <value>
                    <fullName>56F - TCD</fullName>
                </value>
                <value>
                    <fullName>56H - ASD</fullName>
                </value>
                <value>
                    <fullName>58A - IO</fullName>
                </value>
                <value>
                    <fullName>58C - SPD</fullName>
                </value>
                <value>
                    <fullName>58D - CAMD</fullName>
                </value>
                <value>
                    <fullName>58E - CPPD</fullName>
                </value>
                <value>
                    <fullName>58F - CCD</fullName>
                </value>
                <value>
                    <fullName>58 – OAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Federal_Cost_Share__c</fullName>
        <label>Actual Federal Cost Share</label>
        <summarizedField>GLLA_Agreement__c.Federal_Contribution_Summary__c</summarizedField>
        <summaryForeignKey>GLLA_Agreement__c.Project_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_NFS_Cost_Share_Contribution__c</fullName>
        <formula>Cash_Contributions__c +  In_Kind_Contributions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual NFS Cost Share Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Total_Amount__c</fullName>
        <formula>Actual_NFS_Cost_Share_Contribution__c +  Actual_Federal_Cost_Share__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Received_Date__c</fullName>
        <label>Application Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Area_of_Concern__c</fullName>
        <label>Area of Concern</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>St. Louis River, MN</fullName>
                </value>
                <value>
                    <fullName>Torch Lake, MI</fullName>
                </value>
                <value>
                    <fullName>Deer Lake</fullName>
                </value>
                <value>
                    <fullName>Manistique River, MI</fullName>
                </value>
                <value>
                    <fullName>Menominee River, WI</fullName>
                </value>
                <value>
                    <fullName>Fox River/Green Bay, WI</fullName>
                </value>
                <value>
                    <fullName>Sheboygan River, WI</fullName>
                </value>
                <value>
                    <fullName>Milwaukee Estuary, WI</fullName>
                </value>
                <value>
                    <fullName>Waukegon Harbor, IL</fullName>
                </value>
                <value>
                    <fullName>Grand Calumet River/Indiana Harbor Canal, IN</fullName>
                </value>
                <value>
                    <fullName>Kalamazoo River, MI</fullName>
                </value>
                <value>
                    <fullName>Muskegon Lake, MI</fullName>
                </value>
                <value>
                    <fullName>White Lake, MI</fullName>
                </value>
                <value>
                    <fullName>Saginaw River, MI</fullName>
                </value>
                <value>
                    <fullName>St. Mary's River, MI</fullName>
                </value>
                <value>
                    <fullName>St. Clair River, MI</fullName>
                </value>
                <value>
                    <fullName>Clinton River, MI</fullName>
                </value>
                <value>
                    <fullName>Rouge River, MI</fullName>
                </value>
                <value>
                    <fullName>River Raisin, MI</fullName>
                </value>
                <value>
                    <fullName>Maumee River, OH</fullName>
                </value>
                <value>
                    <fullName>Black River, OH</fullName>
                </value>
                <value>
                    <fullName>Cuyahoga River, OH</fullName>
                </value>
                <value>
                    <fullName>Ashtabula River, OH</fullName>
                </value>
                <value>
                    <fullName>Buffalo River, NY</fullName>
                </value>
                <value>
                    <fullName>Detroit River, MI</fullName>
                </value>
                <value>
                    <fullName>Presque Isle Bay, PA</fullName>
                </value>
                <value>
                    <fullName>Eighteenmile Creek, NY</fullName>
                </value>
                <value>
                    <fullName>Rochester Embayment, NY</fullName>
                </value>
                <value>
                    <fullName>Oswego River, NY</fullName>
                </value>
                <value>
                    <fullName>St. Lawrence River, NY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cash_Contributions__c</fullName>
        <description>Rollup for the GLLA agreement details</description>
        <label>Cash Contributions</label>
        <summarizedField>GLLA_Agreement__c.Cash_Contributions__c</summarizedField>
        <summaryForeignKey>GLLA_Agreement__c.Project_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Closeout_Date__c</fullName>
        <label>Closeout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <description>organization/entity/contractor name</description>
        <label>Contractor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CH2M</fullName>
                </value>
                <value>
                    <fullName>EA_Engineering</fullName>
                    <label>EA Engineering</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Amendment_1_Signed__c</fullName>
        <description>Calendar date site characterization memo was amended by EPA</description>
        <label>Date Amendment 1 Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Amendment_2_Signed__c</fullName>
        <description>Calendar date site characterization memo was amended by EPA</description>
        <label>Date Amendment 2 Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Amendment_3_Signed__c</fullName>
        <description>Calendar date site characterization memo was amended by EPA</description>
        <label>Date Amendment 3 Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Memo_Signed__c</fullName>
        <description>calendar date site characterization memo signed by EPA</description>
        <label>Date Memo Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Task_Order_Closed_Out__c</fullName>
        <description>calendar date the contractor’s task order was administratively closed out</description>
        <label>Date Task Order Closed Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Work_Completed__c</fullName>
        <description>calendar date all work activities were completed</description>
        <label>Date Work Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Federal_Cost_Share__c</fullName>
        <label>Estimated Federal Cost Share</label>
        <summarizedField>GLLA_Agreement__c.Federal_Cost_Share_Amount__c</summarizedField>
        <summaryForeignKey>GLLA_Agreement__c.Project_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimated_NFS_Cost_Share__c</fullName>
        <label>Estimated NFS Cost Share</label>
        <summarizedField>GLLA_Agreement__c.NFS_Cost_Share_Amount__c</summarizedField>
        <summaryForeignKey>GLLA_Agreement__c.Project_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Amount__c</fullName>
        <formula>Estimated_Federal_Cost_Share__c + Estimated_NFS_Cost_Share__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Summary_Comments__c</fullName>
        <label>Financial Summary Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLLA_Project_Name__c</fullName>
        <description>GLLA Project Name, 2018.09.18</description>
        <label>GLLA Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Kind_Contributions__c</fullName>
        <description>Rollup from GLLA agreement</description>
        <label>In Kind Contributions</label>
        <summarizedField>GLLA_Agreement__c.In_Kind_Contributions__c</summarizedField>
        <summaryForeignKey>GLLA_Agreement__c.Project_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <label>Location City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_State__c</fullName>
        <label>Location State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Project_ID__c</fullName>
        <label>Master Project ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFS_Cost_Share_Balance__c</fullName>
        <formula>Estimated_NFS_Cost_Share__c + Actual_NFS_Cost_Share_Contribution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NFS Cost Share Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Agreement_Total__c</fullName>
        <label>Project Agreement Total</label>
        <summarizedField>GLLA_Agreement__c.Project_Agreement_Amount__c</summarizedField>
        <summaryForeignKey>GLLA_Agreement__c.Project_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <inlineHelpText>All Project Codes must contain 4 digits</inlineHelpText>
        <label>Project Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project_Code__c &amp; " - " &amp;  Project__c</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status_Comments__c</fullName>
        <label>Project Status Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Task_Name__c</fullName>
        <formula>Sub_Task_code__c &amp; " - " &amp;  Sub_Task__c</formula>
        <label>Sub-Task Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Task__c</fullName>
        <label>Sub-Task</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Task_code__c</fullName>
        <label>Sub-Task Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <formula>Task_code__c &amp; " - " &amp;   Task__c</formula>
        <label>Task Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <description>Text Task Name input field.</description>
        <label>Task</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_code__c</fullName>
        <label>Task / Group Line Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Project_Cost__c</fullName>
        <label>Total Project Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <description>Project information.  Used initially for categorizations of spending in DCR and description of activities in GLLA.</description>
    <label>Project</label>
    <nameField>
        <displayFormat>EPA-PRJ-{000000}</displayFormat>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>ASD_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Sub_Task_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AHRC__c</field>
            <operation>equals</operation>
            <value>56H - ASD</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>DCR: ASD Projects</label>
        <sharedTo>
            <group>DCR_OAR_OTAQ</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AHRC__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Sub_Task_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Task__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.DCR_Project_Record_Type</value>
        </filters>
        <label>DCR: All Projects</label>
        <sharedTo>
            <group>DCR_OAR_OTAQ</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CD_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Sub_Task_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AHRC__c</field>
            <operation>equals</operation>
            <value>56C - CD</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>DCR: CD Projects</label>
        <sharedTo>
            <group>DCR_OAR_OTAQ</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DCR_ASD_Project_Maint</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Task__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AHRC__c</field>
            <operation>equals</operation>
            <value>56H - ASD</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.DCR_Project_Record_Type</value>
        </filters>
        <label>DCR: ASD Project Maint.</label>
        <sharedTo>
            <group>DCR_OAR_OTAQ</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GLLA_Cost_Share_Project</fullName>
        <columns>NAME</columns>
        <columns>GLLA_Project_Name__c</columns>
        <columns>Master_Project_ID__c</columns>
        <columns>Area_of_Concern__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.GLLA_Project_Record_Type</value>
        </filters>
        <label>GLLA Cost Share Project</label>
    </listViews>
    <listViews>
        <fullName>GLLA_Projects</fullName>
        <columns>NAME</columns>
        <columns>GLLA_Project_Name__c</columns>
        <columns>Master_Project_ID__c</columns>
        <columns>Area_of_Concern__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.GLLA_Project_Record_Type</value>
        </filters>
        <label>GLLA Projects</label>
        <sharedTo>
            <group>GLLA_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GLLA_Site_Characterization</fullName>
        <columns>NAME</columns>
        <columns>GLLA_Project_Name__c</columns>
        <columns>Master_Project_ID__c</columns>
        <columns>Area_of_Concern__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.GLLA_Site_Characterizations_Record_Type</value>
        </filters>
        <label>GLLA Site Characterizations</label>
    </listViews>
    <listViews>
        <fullName>IO_AA_Projects</fullName>
        <columns>NAME</columns>
        <columns>Task_Name__c</columns>
        <columns>Project_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AHRC__c</field>
            <operation>equals</operation>
            <value>56E - IO-AA</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>DCR: IO-AA Projects</label>
        <sharedTo>
            <group>DCR_OAR_OTAQ</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IO_DC_Projects</fullName>
        <columns>NAME</columns>
        <columns>Task_Name__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Sub_Task_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AHRC__c</field>
            <operation>equals</operation>
            <value>56A - IO-DC</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>DCR: IO-DC Projects</label>
        <sharedTo>
            <group>DCR_OAR_OTAQ</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TATD_Projects</fullName>
        <columns>NAME</columns>
        <columns>Task_Name__c</columns>
        <columns>Sub_Task_Name__c</columns>
        <columns>Project_Name__c</columns>
        <columns>AHRC__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Task__c</columns>
        <columns>Sub_Task_code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AHRC__c</field>
            <operation>equals</operation>
            <value>56D - TATD</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.DCR_Project_Record_Type</value>
        </filters>
        <label>DCR: TATD Projects</label>
        <sharedTo>
            <group>DCR_OAR_OTAQ</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TCD_Projects1</fullName>
        <columns>NAME</columns>
        <columns>Task_Name__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Sub_Task_Name__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AHRC__c</field>
            <operation>equals</operation>
            <value>56F - TCD</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>DCR: TCD Projects</label>
        <sharedTo>
            <group>DCR_OAR_OTAQ</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>DCR_Project_Record_Type</fullName>
        <active>true</active>
        <description>DCR Project Record Type</description>
        <label>DCR Project Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>GLLA_Project_Record_Type</fullName>
        <active>true</active>
        <description>GLLA Cost Share Project Record Type</description>
        <label>GLLA Cost Share Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>GLLA_Site_Characterizations_Record_Type</fullName>
        <active>true</active>
        <description>GLLA Site Characterizations Record Type</description>
        <label>GLLA Site Characterizations</label>
    </recordTypes>
    <validationRules>
        <fullName>Minimum_4_digits</fullName>
        <active>true</active>
        <errorConditionFormula>( LEN(Project_Code__c) != 4 ) &amp;&amp;  RecordType.DeveloperName == 'DCR Project Record Type'</errorConditionFormula>
        <errorDisplayField>Project_Code__c</errorDisplayField>
        <errorMessage>All Project Codes must be 4 digits</errorMessage>
    </validationRules>
</CustomObject>